fixed sb galler align

--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -233,8 +233,8 @@ margin-right: 30px;
 }
 
 #top .gallery.gallery-columns-6 dl.gallery-item:nth-child(6),
-#top .gallery.gallery-columns-6 dl.gallery-item:nth-child(13),
-#top .gallery.gallery-columns-6 dl.gallery-item:nth-child(20) {
+#top .gallery.gallery-columns-6 dl.gallery-item:nth-child(12),
+#top .gallery.gallery-columns-6 dl.gallery-item:nth-child(18) {
 margin-right:0px;
 }
 
